# syra_agent

./: .arena-credentials  .arena-feature-log.json  .arena-learner-state.json  .gitattributes  .gitignore  .gitleaks.toml  .openrouter-models-tmp.json  LICENSE  README.md  brand.md  cookies_pf.txt  openapi.json  package-lock.json  package.json  skills-lock.json
.cursor/: mcp.json
.cursor-plugin/: marketplace.json
.github/: dependabot.yml
.playwright-mcp/: page-2026-07-19T07-25-17-740Z.yml  page-2026-07-19T07-26-50-839Z.yml  page-2026-07-19T07-41-36-429Z.yml  page-2026-07-19T07-41-51-874Z.yml  page-2026-07-19T07-42-09-560Z.yml  page-2026-07-19T07-42-26-903Z.yml  page-2026-07-19T07-56-38-349Z.yml  page-2026-07-19T07-56-52-162Z.yml  page-2026-07-21T04-36-38-669Z.yml  page-2026-07-21T04-37-21-812Z.yml  page-2026-07-21T05-13-50-065Z.yml  page-2026-07-21T05-14-21-811Z.yml  page-2026-07-21T05-14-35-350Z.yml
agent-rules-general/: README.md  backend-engineering.mdc  ceo-review.mdc  code-review.mdc  cofounder.mdc  cto-architecture.mdc  customer-support.mdc  data-analytics.mdc  dead-code.mdc  developer-relations.mdc  devops-sre.mdc  finance-pricing.mdc  growth-marketing.mdc  hacker-security.mdc  legal-compliance.mdc  performance-engineering.mdc  product-manager.mdc  product-strategy.mdc  roadmap-strategy.mdc  security-engineering.mdc  smart-contracts.mdc  test-case-generation.mdc
staking/programs/staking/: Cargo.toml
staking/programs/staking/src/: error.rs  lib.rs  state.rs
staking/programs/staking/src/instructions/: claim.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
(+4299 files in other folders)
