[package]
name = "staking"
version = "0.1.0"
description = "SPL Token Staking with emission-per-second rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
# Unused: period durations are now 1 min, 1 hour, 1 day on both devnet and mainnet.
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Silence cfg warnings from Anchor/solana_program macros
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
